...
}

#Preview("ClosestFavoriteRow") {
    ClosestFavoriteRow(
        closest: ClosestFavorite(
            favorite: Favorite(id: "1", name: "Slusseen", lines: []),
            stop: Stop(id: "2", name: "Slussen", latitude: 1, longitude: 2, distance: 2)
        )
    )
}

