...
      "comment": "The app creator's name; not translated.",
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Olli Tapaninen"
          }
        },
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Olli Tapaninen"
...
